Fixed layout issue of flexbox.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -92,7 +92,6 @@ article p {
 .flex-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
 }
 
 .figure {
